结合前端修改注解@RequestBody的bug + 收治病人的逻辑（stream的filter）采用Repo(账户信息直接存内存) + cookie不一致问题（修改配置文件）

--- a/springboot-init-master/src/main/resources/application.yml
+++ b/springboot-init-master/src/main/resources/application.yml
@@ -51,9 +51,10 @@ server:
       cookie:
         max-age: 2592000
         domain: localhost
+        # same-site: none
         same-site: none
         secure: true
-
+        http-only: true
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: false
